--- a/vue.html
+++ b/vue.html
@@ -6,6 +6,7 @@
     <div id="app">
       {{title}}
       <input type="text" v-model="my"/>
+	  <p> 双方家里舒服就，放假啦放假啦设计费</p>
       <h1>{{my}}</h1>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
