--- a/vue.html
+++ b/vue.html
@@ -7,6 +7,7 @@
       {{title}}
       <input type="text" v-model="my"/>
 	  <p> 双方家里舒服就，放假啦放假啦设计费</p>
+	  <h1>还要来一次 哈哈哈哈哈哈</h1>
       <h1>{{my}}</h1>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
